Profile page UI done

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -9,7 +9,7 @@
 
 .home-container {
     height: 83%;
-    width: 51%;
+    width: 90%;
     background-color: white;
     border-radius: 15px;
     box-shadow: 1px 3px 30px rgb(167 191 218 / 45%);
@@ -21,6 +21,9 @@
     z-index: 400000000;
 }
 
+.home-container-half {
+    width: 51% !important;
+}
 
 
 .home-login-container {
