--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -16,7 +16,13 @@
     font-size: 13px;
     align-items: center;
     color: rgb(162 161 161);
+    transition: all 250ms;
     cursor: pointer;
+}
+
+.event-back:hover
+{
+    background-color: rgb(222, 222, 222);
 }
 
 .event-back span {
