--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 0px 3px 30px rgb(156 156 208 / 23%);
+    /* box-shadow: 0px 3px 30px rgb(156 156 208 / 23%); */
 }
 
 .sidebar-container {
