--- a/src/Components/EventListing/EventListing.css
+++ b/src/Components/EventListing/EventListing.css
@@ -12,7 +12,7 @@
 }
 
 .filter-box {
-    background-color: #F9F9F9;
+    /* background-color: #F9F9F9; */
     width: 100%;
     /* height: 40px; */
 }
@@ -123,7 +123,7 @@
 
 .searchbar-inp {
     width: 100%;
-    padding: 5px 5px;
+    padding: 10px;
     border-radius: 8px;
     border: 1px solid #C4C4C4;
 }
