--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -8,7 +8,7 @@
 }
 
 .home-container {
-    height: 87%;
+    height: 85%;
     width: 51% !important;
     background-color: white;
     border-radius: 15px;
@@ -16,8 +16,9 @@
     display: flex;
     padding: 30px;
     position: absolute;
-    left: 30px;
-    top: 30px;
+    left: 100px;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 400000000;
 }
 
