--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -7,6 +7,13 @@
     flex-direction: column;
     justify-content: space-between;
     /* box-shadow: 0px 3px 30px rgb(156 156 208 / 23%); */
+    position: absolute;
+    z-index: 5000000000000;
+    height: 85%;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    border-radius: 15px;
 }
 
 .sidebar-container {
