--- a/src/Components/ResultCard/card.css
+++ b/src/Components/ResultCard/card.css
@@ -5,6 +5,7 @@
     min-width: 250px;
     margin-bottom: 7%;
     box-shadow: 7px 4px 20px rgb(30 30 30 / 18%);
+    border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 8px;
     cursor: pointer;
     transition: all 350ms;
