Location search facility added

--- a/src/Components/Add Event Form/addEventMap.css
+++ b/src/Components/Add Event Form/addEventMap.css
@@ -20,37 +20,46 @@
     right: 20px;
 }
 
-.geocoder-control {
-    width: 200px;
-}
-
-.geocoder-control-suggestions {
-    background-color: white;
-    text-align: left;
-}
-
 .leaflet-touch .leaflet-control-layers,
 .leaflet-touch .leaflet-bar {
-    width: 100%;
-    padding: 5px 10px;
-    border-radius: 8px;
-    box-shadow: 1px 3px 30px rgb(167 191 218 / 45%);
-    border: none;
-    outline: none;
+    border: none !important;
 }
 
+.leaflet-locationiq-input {
+    width: 96%;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+}
 
-.geocoder-control-suggestions ul {
+.leaflet-touch .leaflet-bar a {
+    display: none;
+}
+
+.leaflet-locationiq-close {
+    display: none;
+}
+
+.leaflet-locationiq-list {
+    background-color: #fff;
+    padding: 7px;
+    margin-top: 2px;
+    border-radius: 8px;
+    width: 95%;
     list-style: none;
 }
 
-.geocoder-control-suggestions ul li {
-    cursor: pointer;
-    border-radius: 8px;
-    padding: 2px;
-
+.leaflet-locationiq-results {
+    overflow-y: scroll;
 }
 
-.geocoder-control-suggestions ul li:hover {
+.leaflet-locationiq-result {
+    padding: 2px;
+}
+
+.leaflet-locationiq-result:hover {
     background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    cursor: pointer;
 }
