--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -21,6 +21,7 @@
     transform: translateY(-50%);
     z-index: 400000000;
     overflow: hidden;
+    border: 1px solid rgba(162, 162, 162, 0.3);
 }
 
 
