--- a/src/Components/EventListing/EventListing.css
+++ b/src/Components/EventListing/EventListing.css
@@ -4,8 +4,11 @@
     flex-direction: column;
     width: 100%;
     overflow: hidden;
-    position: relative;
+    position: relative;    
+    padding: 0 10px;
 }
+
+
 
 .event-listing-top {
     flex: 18%;
@@ -14,71 +17,21 @@
 
 .filter-box {
     /* background-color: #F9F9F9; */
-    width: 100%;
+    display: flex;
+    gap: 10px;
     /* height: 40px; */
 }
-
-.filter-box-container {
-    padding: 10px 2px;
-    border-radius: 8px;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    overflow: scroll;
-}
-
-.filter-container {
-    display: flex;
-}
-
-.filter-dr-down {
-    /* width: 17%; */
-    min-width: 112px;
-    margin-right: 20px;
-}
-
-.filter-dr-down select {
-    box-shadow: 1px 3px 10px rgb(167 191 218 / 30%);
-    padding: 8px;
-    border-radius: 8px;
-    border: 1px solid #C4C4C4;
-}
-
-.selected-filter {
-    padding: 8px;
-    border-radius: 8px;
-    box-shadow: 1px 3px 10px #1f2c603d;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-    background-color: #456AF2;
-    color: white;
+.filter-box button {
+    padding: 2px 10px;
+    font-size: 0.75rem;
+    background-color: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgba(162, 162, 162,0.55);
+    border-radius: 4px;
+    box-shadow: 1px 1px 10px rgba(162, 162, 162,0.35);
     cursor: pointer;
-    transition: all 250ms;
 }
-
-.selected-filter-field {
-    min-width: 50px;
-    display: flex;
-    align-items: center;
-}
-
-.remove-filter {
-    transition: all 250ms;
-}
-
-.remove-filter:hover {
-    color: #C4C4C4;
-}
-
-.selected-filter-field span {
-    margin-right: 5px;
-}
-
-.selected-filter:hover {
-    background-color: #3a55b9;
-
+.filter-box button:active {
+    box-shadow: inset 1px 1px 10px rgba(162, 162, 162,0.35);
 }
 
 .event-listing-mid {
@@ -95,10 +48,12 @@
 .result-count {
     display: flex;
     align-items: center;
+    font-size: 0.9rem;
 }
 
 .result-count h2 {
     font-weight: 800;
+    font-size: 1.3rem;
 }
 
 .result-count span {
@@ -121,6 +76,12 @@
     height: 100%;
     padding-top: 10px;
     padding-right: 19px;
+    padding-left: 10px;
+}
+
+.searchbar
+{
+    position: relative;
 }
 
 .searchbar-inp {
@@ -130,10 +91,73 @@
     border: 1px solid #C4C4C4;
 }
 
+.search-result-container
+{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 45px;
+    width: 100%;
+    min-height: 50px;
+    max-height: 55vh;
+    background-color: rgba(255, 255, 255, 0.75);
+    backdrop-filter: blur(3px);
+    border: 1px solid rgba(162, 162, 162,0.35);
+    border-radius: 8px;
+    z-index: 200;
+    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.25);
+    overflow: scroll;
+}
+
+.search-result-container-main
+{
+}
+.search-key
+{
+    display: flex;
+    align-items: center;
+    font-size: 0.85rem;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+.search-key:hover
+{
+    background-color: rgba(162, 162, 162,0.35);
+}
+.search-result-img
+{
+    height: 30px;
+    width: 30px;
+    background-color: grey;
+    border-radius: 3px;
+}
+.search-result-line
+{
+    padding: 10px 20px;   
+    text-align: left;
+    align-items: center;
+    display: flex;
+    gap: 20px;
+    cursor: pointer;
+    font-size: 0.8rem;
+}
+.search-result-info
+{
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+.search-result-line:hover
+{
+    background-color: rgba(162, 162, 162,0.35);
+
+}
+
+
 .event-add-btn-container {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 10px;
+    right: 20px;
 }
 
 .event-add-btn-container button {
@@ -141,7 +165,7 @@
     border-radius: 10px;
     color: white;
     box-shadow: 1px 1px 8px #456af2;
-    padding: 10px;
+    padding: 10px 0px;
     border: none;
 }
 
@@ -160,3 +184,4 @@
         /* max-width: unset !important; */
     }
 }
+
