--- a/src/Components/RegisteredEvents/registered.css
+++ b/src/Components/RegisteredEvents/registered.css
@@ -11,20 +11,25 @@
     align-items: center;
 }
 
+.reg-head span
+{
+    font-size: 1.1rem;
+}
+
 .reg-back-container {
     width: fit-content;
     display: flex;
     margin-bottom: 7px;
     background-color: rgb(242, 242, 242);
     box-shadow: 2px 2px 5px rgb(30 30 30 / 10%);
-    padding: 7px 10px;
+    padding: 5px 8px;
     border-radius: 13px;
     font-size: 13px;
     align-items: center;
     color: rgb(162 161 161);
     cursor: pointer;
     transition: all 250ms;
-    margin-right: 20px;
+    margin-right: 12px;
 }
 
 .reg-back-container:hover {
@@ -32,7 +37,7 @@
 }
 
 
-.reg-head::after {
+/* .reg-head::after {
     content: "";
     position: absolute;
     bottom: -10px;
@@ -40,7 +45,7 @@
     width: 100%;
     height: 1px;
     background-color: rgb(185, 185, 185);
-}
+} */
 
 .reg-events-container {
     width: 100%;
@@ -48,9 +53,39 @@
     padding-top: 10px;
     padding-right: 19px;
     display: flex;
-    gap: 20px;
     margin-top: 50px;
     flex-wrap: wrap;
     overflow: scroll;
     justify-content: space-between;
+}
+
+.reg-events-inner-container
+{
+    display: flex;
+    flex-direction: column;
+}
+.reg-events-inner-container
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.reg-events-inner-container>span
+{
+    margin-bottom: 30px;
+    /* color: rgb(162, 162, 162); */
+    color: white;
+    margin-left: 3px;
+    width: 93%;
+    text-align: center;
+    background-color: rgba(72, 72, 72);
+    font-size: 0.75rem;
+    border-radius: 13px;
+    padding: 3px 0;
+}
+.reg-events-container-main
+{ 
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
