--- a/src/Components/ResultCard/card.css
+++ b/src/Components/ResultCard/card.css
@@ -52,16 +52,35 @@
     z-index: 50;
 }
 
-.host-sticker {
+.card-sticker-container {
     position: absolute;
     color: white;
     top: 10px;
     right: 10px;
+    z-index: 50000;
+}
+
+.card-sticker
+{
+    /* box-shadow: 1px 1px 5px rgb(17 201 106 / 73%); */
     background-color: rgb(0 177 85);
-    box-shadow: 1px 1px 16px rgb(17 201 106 / 73%);
     padding: 1px 7px;
     border-radius: 8px;
-    z-index: 50000;
+    font-size: 0.6rem;
+    margin-bottom: 5px;
+    text-align: center;
+}
+.host-sticker
+{
+    background-color: rgb(0 177 85/60%);
+}
+.participant-sticker
+{
+    background-color: rgb(69 102 246/60%);
+}
+.past-sticker
+{
+    background-color: rgb(246 69 69/60%);
 }
 
 .card-img img {
@@ -98,6 +117,7 @@
     max-height: 20px;
     overflow: hidden;
     text-align: left;
+    font-size: 0.8rem;
 }
 
 .card-bottom {
@@ -112,4 +132,5 @@
 .card-bottom span {
     display: flex;
     align-items: center;
+    font-size: 0.75rem;
 }
