--- a/src/Components/Chat/chat.css
+++ b/src/Components/Chat/chat.css
@@ -19,6 +19,7 @@
     box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.05);
     /* padding: 20px; */
     z-index: 5;
+    overflow: scroll;
 }
 
 .chat-container .chat-right {
