--- a/src/Components/ResultCard/card.css
+++ b/src/Components/ResultCard/card.css
@@ -60,8 +60,7 @@
     z-index: 50000;
 }
 
-.card-sticker
-{
+.card-sticker {
     /* box-shadow: 1px 1px 5px rgb(17 201 106 / 73%); */
     background-color: rgb(0 177 85);
     padding: 1px 7px;
@@ -70,16 +69,16 @@
     margin-bottom: 5px;
     text-align: center;
 }
-.host-sticker
-{
+
+.host-sticker {
     background-color: rgb(0 177 85/60%);
 }
-.participant-sticker
-{
+
+.participant-sticker {
     background-color: rgb(69 102 246/60%);
 }
-.past-sticker
-{
+
+.past-sticker {
     background-color: rgb(246 69 69/60%);
 }
 
