Minor change in css to adjust event image

--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -57,6 +57,9 @@
     width: 100%;
     border-radius: 13px;
     box-shadow: 7px 4px 20px rgb(30 30 30 / 28%);
+    height: 36vw;
+    max-width: 52vw;
+    max-height: 50vh;
 }
 
 
@@ -162,8 +165,7 @@
     margin-top: 10px;
 }
 
-.event-interaction-btns
-{
+.event-interaction-btns {
     display: flex;
     gap: 20px;
     margin-bottom: 10px;
