--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,6 +1,6 @@
 .Home {
     /* background: url("./bg.jpg") no-repeat center center/cover; */
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     /* padding: 30px; */
     overflow: hidden;
