Made the website responsive

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,16 @@
   width: 100vw;
 }
 
+html {
+  overflow: hidden;
+
+}
+
 .main-app-dock {
   text-align: center;
   display: flex;
+}
+
+.component-hidden {
+  opacity: 0;
 }
