--- a/src/Components/Chat/chat.css
+++ b/src/Components/Chat/chat.css
@@ -1,5 +1,6 @@
 .chat {
     width: 100%;
+    height: 100%;
 }
 
 .chat-container {
@@ -12,18 +13,22 @@
 }
 
 .chat-container .chat-left {
-    flex: 0.4;
-    /* background-color: black; */
+    width: 40%;
     display: flex;
     flex-direction: column;
     box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.05);
     /* padding: 20px; */
     z-index: 5;
+}
+
+.chat-left-container {
     overflow: scroll;
 }
 
+
 .chat-container .chat-right {
-    flex: 0.6;
+    /* flex: 0.6; */
+    width: 60%;
     background-color: #F6F8FC;
     display: flex;
 }
@@ -105,17 +110,15 @@
     margin-right: 10px;
 }
 
-.chat-op-info
-{
+.chat-op-info {
     display: flex;
     flex-direction: column;
     font-size: 0.7rem;
-    width: 75%;
+    width: 100%;
     text-align: left;
 }
 
-.chat-op-info-btm
-{
+.chat-op-info-btm {
     display: flex;
     justify-content: space-between;
     color: rgb(72 72 72);
@@ -127,15 +130,27 @@
     font-size: 0.85rem;
 }
 
-.chat-event-timeline
-{
+.chat-event-timeline {
     /* text-align: left; */
     color: rgb(162, 162, 162);
     /* margin-bottom: 5px; */
     margin-top: 10px;
     font-size: 0.75rem;
 }
-.chat-event-timeline:nth-child(2)
-{
+
+.chat-event-timeline:nth-child(2) {
     margin-top: 0px !important;
+}
+
+
+
+
+@media only screen and (max-width: 1000px) {
+    .chat-container .chat-left {
+        width: 100%;
+    }
+
+    .chat-container .chat-right {
+        display: none;
+    }
 }
