--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: left;
+    overflow: scroll;
 }
 
 .event-back {
@@ -44,6 +45,7 @@
     width: 100%;
     margin-top: 10px;
     margin-left: 5px;
+    height: fit-content;
 }
 
 .event-top-container {
@@ -53,25 +55,68 @@
     justify-content: space-between;
 }
 
-.event-main-img {
+.event-main-img-continer {
+    padding: 10px 0px;
+    overflow: hidden;
     width: 100%;
-    border-radius: 13px;
-    box-shadow: 7px 4px 20px rgb(30 30 30 / 28%);
-    height: 36vw;
-    max-width: 52vw;
-    max-height: 50vh;
+    height: 50vh;
+    display: flex;
+    gap: 20px;
 }
 
+.event-main-image-container {
+    border-radius: 8px;
+    box-shadow: 7px 4px 10px rgb(30 30 30 / 38%);
+    width: 80%;
+    overflow: hidden;
+}
+
+.event-main-img {
+    /* object-fit: cover; */
+    width: 100%;
+    height: 100%;
+}
+
+.event-more-img-container {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    gap: 10px;
+    overflow: scroll;
+}
+
+.event-more-img {
+    width: 100%;
+    height: 100px;
+    border-radius: 8px;
+}
+
+.event-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
 .event-info:not(:last-child) {
     margin-top: 10px;
 }
 
 .event-host {
+    text-align: left;
+    display: flex;
+    align-items: center;
+    /* margin-top: 20px !important; */
+}
+
+.event-stickers {
+    display: flex;
+    margin-top: 5px;
+    gap: 10px;
+}
+
+.event-host span {
     color: rgb(37, 138, 95);
     font-weight: 600;
-    text-align: left;
-    /* margin-top: 20px !important; */
 }
 
 .event-people {
@@ -95,6 +140,9 @@
 .event-desc {
     color: rgb(162 161 161);
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .event-desc p {
@@ -103,24 +151,25 @@
     color: black;
 }
 
-.event-more-images {
+.event-more-images-mobile {
     font-weight: 600;
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    /* display: flex; */
+    display: none;
 }
 
-.event-more-images span {
+.event-more-images-mobile span {
     margin-bottom: 10px;
 }
 
-.event-more-images-container {
+.event-more-images-container-mobile {
     display: flex;
     overflow: scroll;
     padding: 10px 5px;
 }
 
-.event-more-img {
+.event-more-img-mobile {
     min-width: 100px;
     height: 65px;
     border-radius: 13px;
@@ -129,23 +178,8 @@
     cursor: pointer;
 }
 
-.event-more-img-selected {
-    position: relative;
-}
 
-.event-more-img-selected::before {
-    content: "";
-    position: absolute;
-    width: 107%;
-    height: 114%;
-    left: -5px;
-    top: -5px;
-    border-radius: 13px;
-    z-index: -100;
-    border: 1px solid rgb(37 138 95/30%);
-}
-
-.event-more-img:not(:last-child) {
+.event-more-img-mobile:not(:last-child) {
     margin-right: 10px;
 }
 
@@ -169,4 +203,50 @@
     display: flex;
     gap: 20px;
     margin-bottom: 10px;
+}
+
+.event-people-info {
+    display: flex;
+}
+
+@media only screen and (max-width: 660px) {
+    .event-more-img-container {
+        display: none;
+    }
+
+    .event-more-images-mobile {
+        display: flex;
+    }
+
+    .event-main-image-container {
+        width: 100%;
+    }
+
+    .event-main-img-continer {
+        height: 36vh;
+    }
+
+    .event-top {
+        font-size: 12px;
+    }
+
+    .event-info-date-participants {
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+    }
+
+    .event-people-icon {
+        font-size: 15px;
+        display: flex;
+    }
+
+    .event-interaction-btns {
+        gap: 10px;
+    }
+
+    .event-interaction-btns button {
+        font-size: 12px;
+        width: 50%;
+    }
 }
