--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,29 +1,73 @@
 .Home {
     /* background: url("./bg.jpg") no-repeat center center/cover; */
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
     /* padding: 30px; */
     overflow: hidden;
     position: relative;
+    transition: all 250ms;
+}
+
+.home-dock {
+    transition: all 500ms;
+    overflow: scroll;
+    height: 100%;
+}
+
+.home-blurred {
+    filter: blur(10px);
 }
 
 .home-container {
     height: 85%;
     width: 51% !important;
-    background-color: white;
+    background-color: rgba(255, 255, 255);
     border-radius: 15px;
     box-shadow: 1px 3px 30px rgb(167 191 218 / 45%);
     display: flex;
+    flex-direction: column;
     padding: 30px;
     position: absolute;
     left: 100px;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 400000000;
-    overflow: hidden;
+    z-index: 600;
+    /* overflow: hidden; */
     border: 1px solid rgba(162, 162, 162, 0.3);
+    transition: all 400ms;
 }
 
+
+.home-container-hidden {
+    top: 143% !important;
+}
+
+
+.home-container-toggler {
+    height: 0;
+    overflow: visible;
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.home-container-toggler-container {
+    background-color: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+    transition: all 250ms;
+}
+
+.home-container-toggler-container:active {
+    box-shadow: inset -1px -3px 2px rgba(0, 0, 0, 0.25);
+
+}
 
 
 
@@ -41,6 +85,8 @@
     background: transparent;
     padding: 10px;
 }
+
+
 
 .home-login-loggedOut-container {
     box-shadow: 1px 3px 10px rgb(39 42 46 / 15%);
@@ -87,7 +133,7 @@
     color: white;
     cursor: pointer;
     transition: all 250ms;
-    z-index: 4000000;
+    z-index: 500;
 }
 
 .user-location:hover {
@@ -104,4 +150,27 @@
 
 .home-map {
     width: 100%;
+}
+
+
+@media only screen and (max-width: 660px) {
+    .home-container {
+        width: 75% !important;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 80vh;
+        top: 53%;
+    }
+
+    .home-container-hidden {
+        top: 135% !important;
+    }
+
+    .user-location {
+        bottom: 100px;
+    }
+
+    .home-login-container {
+        display: none;
+    }
 }
