--- a/src/Components/EventListing/EventListing.css
+++ b/src/Components/EventListing/EventListing.css
@@ -146,6 +146,17 @@
     gap: 20px;
     cursor: pointer;
     font-size: 0.8rem;
+    position: relative;
+}
+
+.search-result-line:not(:last-child):after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: rgba(0, 0, 0, 0.35);
 }
 
 .search-result-info {
