--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -108,6 +108,11 @@
     /* margin-top: 20px !important; */
 }
 
+.event-type
+{
+    
+}
+
 .event-stickers {
     display: flex;
     margin-top: 5px;
