--- a/src/Components/Authentication/auth.css
+++ b/src/Components/Authentication/auth.css
@@ -23,24 +23,51 @@
 
 .login-heading {
     margin-bottom: 20px;
+    text-align: center;
+
 }
 
 .google-login-container {
-    height: 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 8px 5px;
-    border: 1px solid black;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    cursor: pointer;
 }
 
-.google-login-container img {
-    width: 20px;
-    margin-right: 5px;
+.google-login-main {
+    /* width: 100%; */
+    margin-bottom: 10px;
 }
+
+
+
+.google-login-container-partition-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    width: 68%;
+}
+
+.google-login-container-partition-wrapper span {
+    color: rgba(0, 0, 0, 0.75);
+}
+
+.google-login-container-partition {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    position: relative;
+    width: 100%;
+
+}
+
+
+.google-login-container-partition-line {
+    width: 45%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 
 .login-partition {
     display: flex;
@@ -102,14 +129,7 @@
     }
 
 
-    .google-login-container {
-        font-size: 12px;
-        margin-bottom: 10px;
-    }
 
-    .google-login-container img {
-        width: 15px;
-    }
 
     .login-credential-more {
         font-size: 12px;
