--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -109,6 +109,35 @@
     display: flex;
     flex-direction: column;
     padding: 25px;
+    position: relative;
+}
+
+.profile-mid-container input {
+    border: none;
+    padding: 4px 0px;
+    font-size: 14px;
+    background-color: transparent;
+}
+
+.profile-edit-wrapper {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    gap: 5px;
+}
+
+.profile-edit-btn {
+    padding: 2px 10px;
+    font-size: 12.5px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+    border-radius: 5px;
+    outline: none;
+    box-shadow: 1px 1px 5px rgb(30 30 30 / 18%);
+    cursor: pointer;
+}
+
+.profile-edit-btn:active {
+    box-shadow: inset 1px 1px 5px rgb(30 30 30 / 18%);
 }
 
 .profile-mid-info:not(:first-child) {
@@ -244,14 +273,8 @@
 
 }
 
-/* @media only screen and (max-width: 660px) {
-    .profile {
-        overflow: hidden;
+@media only screen and (max-width: 471px) {
+    .profile-edit-btn {
+        font-size: 10px;
     }
-
-    .profile-container {
-        width: 100%;
-        overflow: hidden;
-    }
-
-} */
+}
