--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -69,10 +69,14 @@
     border-radius: 50%;
     position: relative;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 }
 
 .profile-picture-container img {
     border-radius: 50%;
+    width: 100%;
     object-fit: cover;
 }
 
